--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
     </section>
 
     <section id="featured">
-        <div id="sec-header">
+        <div class="sec-header">
             <h1>Featured Section</h1>
-            <div id="feature-links">
+            <div class="feature-links">
                 <nav class="cursive-font">
                     <a href="/" class="active">Featured</a>
                     <a href="">Best Seller</a>
@@ -114,11 +114,25 @@
             </div>
         </div>
         <div id="toggle">
-            <div id="sec-cards">
+            <div id="sec-cards-feature" class="sec-cards">
             </div>
         </div>
     </section>
     <section id="new-arrival">
+        <div class="sec-header">
+            <h1>Featured Section</h1>
+            <div class="feature-links">
+                <nav class="cursive-font">
+                    <a href="/" class="active">Featured</a>
+                    <a href="">Best Seller</a>
+                    <a href="">New Arrivals</a>
+                </nav>
+            </div>
+        </div>
+        <div id="toggle">
+            <div class="sec-cards" id="sec-cards-arrival">
+            </div>
+        </div>
 
     </section>
 
