--- a/index.html
+++ b/index.html
@@ -120,14 +120,7 @@
     </section>
     <section id="new-arrival">
         <div class="sec-header">
-            <h1>Featured Section</h1>
-            <div class="feature-links">
-                <nav class="cursive-font">
-                    <a href="/" class="active">Featured</a>
-                    <a href="">Best Seller</a>
-                    <a href="">New Arrivals</a>
-                </nav>
-            </div>
+            <h1>New Items</h1>
         </div>
         <div id="toggle">
             <div class="sec-cards" id="sec-cards-arrival">
