--- a/index.html
+++ b/index.html
@@ -114,8 +114,10 @@
             </div>
         </div>
         <div id="toggle">
+            <span class="left-arrow arrow">&rarr;</span>
             <div id="sec-cards-feature" class="sec-cards">
             </div>
+            <span class="right-arrow arrow">&rarr;</span>
         </div>
     </section>
     <section id="new-arrival">
@@ -123,8 +125,10 @@
             <h1>New Items</h1>
         </div>
         <div id="toggle">
+            <span class="left-arrow arrow">&larr;</span>
             <div class="sec-cards" id="sec-cards-arrival">
             </div>
+            <span class="right-arrow arrow">&rarr;</span>
         </div>
 
     </section>
