--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             </div>
         </div>
         <div id="toggle">
-            <span class="left-arrow arrow">&rarr;</span>
+            <span class="left-arrow arrow">&larr;</span>
             <div id="sec-cards-feature" class="sec-cards">
             </div>
             <span class="right-arrow arrow">&rarr;</span>
