--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="https://img.icons8.com/external-vitaliy-gorbachev-lineal-vitaly-gorbachev/60/ffffff/external-bag-ecommerce-vitaliy-gorbachev-lineal-vitaly-gorbachev-1.png"/>
     <title>Fashion Store</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
@@ -114,10 +115,10 @@
             </div>
         </div>
         <div id="toggle">
-            <span class="left-arrow arrow">&larr;</span>
+            <span id="feature-left" class="left-arrow arrow">&larr;</span>
             <div id="sec-cards-feature" class="sec-cards">
             </div>
-            <span class="right-arrow arrow">&rarr;</span>
+            <span id="feature-right" class="right-arrow arrow">&rarr;</span>
         </div>
     </section>
     <section id="new-arrival">
@@ -125,12 +126,16 @@
             <h1>New Items</h1>
         </div>
         <div id="toggle">
-            <span class="left-arrow arrow">&larr;</span>
+            <span class="left-arrow arrow" id="arrival-left">&larr;</span>
             <div class="sec-cards" id="sec-cards-arrival">
             </div>
-            <span class="right-arrow arrow">&rarr;</span>
+            <span class="right-arrow arrow" id="arrival-right">&rarr;</span>
         </div>
 
+    </section>
+
+    <section id="web-feature">
+        
     </section>
 
 
