--- a/index.html
+++ b/index.html
@@ -135,7 +135,38 @@
     </section>
 
     <section id="web-feature">
-        
+        <div class="sec-header">
+            <h1>Who to choose fashion store</h1>
+            <div id="web-cards">
+                <div class="web-card">
+                    <img src="./img/web-feature/DrawKit-Vector-Illustration-ecommerce-12.svg" alt="">
+                    <p>Easy Shopping</p>
+                </div>
+                <div class="web-card">
+                    <img src="./img/web-feature/DrawKit-Vector-Illustration-ecommerce-13.svg" alt="">
+                    <p>Wide Range Of Product</p>
+                </div>
+                <div class="web-card">
+                    <img src="./img/web-feature/DrawKit-Vector-Illustration-ecommerce-16.svg" alt="">
+                    <p>Faster Delivery</p>
+                </div>
+                <div class="web-card">
+                    <img src="./img/web-feature/DrawKit-Vector-Illustration-ecommerce-15.svg" alt="">
+                    <p>Heavy Discount</p>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+    <section id="web-selection">
+        <div class="sec-header">
+            <h1>Who to choose fashion store</h1>
+           <div id="web-selection-container">
+            <img src="./img/DrawKit-Vector-Illustration-ecommerce-08.png" alt="">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, tempore dolore totam maiores omnis a repellat et placeat nesciunt dolor iure suscipit officia hic debitis officiis, aliquam soluta, modi laudantium. Eligendi minus qui maiores. Amet temporibus, placeat quas id sequi, numquam voluptate quibusdam odit veniam nisi deserunt modi laborum? Maiores.</p>
+           </div>
+        </div>
     </section>
 
 
