--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="https://img.icons8.com/external-vitaliy-gorbachev-lineal-vitaly-gorbachev/60/ffffff/external-bag-ecommerce-vitaliy-gorbachev-lineal-vitaly-gorbachev-1.png"/>
     <title>Fashion Store</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="banner-style.css">
     <script src="script.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -89,6 +90,65 @@
         </div>
 
     </section>
+    <section id="banners">
+        <div id="banner-1" class="banner">
+            <div class="banner-left img">
+                <img src="./img/banner-img/laptop.png" alt="">
+            </div>
+            <div class="banner-right">
+                <h1 class="banner-title">Best Quality And Affordable Laptop Series</h1>
+                <h3 class="banner-subtitle">Wide Range Of laptop</h3>
+                <div class="banner-ul-container">
+                    <ul class="banner-ul">
+                        <li>Top Brand's</li>
+                        <li>Intel Processor's</li>
+                        <li>Ryzen Processor's</li>
+                        <li>Gaming Processor's</li>
+                        <li>Office Processor's</li>
+                    </ul>
+                </div>
+   
+            </div>
+        </div>
+        <div id="banner-2" class="banner">
+            <div class="banner-left img">
+                <img src="./img/banner-img/running-shoes.png" alt="">
+            </div>
+            <div class="banner-right">
+                <h1 class="banner-title">New Running Shoes</h1>
+                <h3 class="banner-subtitle">Lorem ipsum dolor sit amet.</h3>
+                <div class="banner-ul-container">
+                    <ul class="banner-ul">
+                        <li>Top Brand's</li>
+                        <li>Huge Discount</li>
+                        <li>Large Brand's selection</li>
+                        <li>All Type Of Foot Wear</li>
+                    </ul>
+                </div>
+   
+            </div>
+        </div>
+        <div id="banner-3" class="banner">
+            <div class="banner-left img">
+                <img src="https://ii1.pepperfry.com/media/catalog/product/a/l/800x400/alfredo-lhs-two-seater-sofa-with-lounger-and-cushions-in-navy-blue-colour-by-casacraft-alfredo-lhs-t-ushy0z.jpg" alt="">
+            </div>
+            <div class="banner-right">
+                <h1 class="banner-title">TRENDS FURNITURE</h1>
+                <h3 class="banner-subtitle">Lorem ipsum dolor sit amet.</h3>
+                <div class="banner-ul-container">
+                    <ul class="banner-ul">
+                        <li>Sofas</li>
+                        <li>Seating</li>
+                        <li>Chairs</li>
+                        <li>Tables</li>
+                        <li>Dining & Bar</li>
+                        <li>Beds</li>
+                    </ul>
+                </div>
+   
+            </div>
+        </div>
+    </section>
     <section id="sec-category">
         <div class="by-gender">
             <div id="men" class="gender">
@@ -169,6 +229,57 @@
         </div>
     </section>
 
+    <footer>
+        <div class="footer-container">
+            <div id="footer-main">
+                <h1>FASHION STORE</h1>
+                <h3>Copyright ©2021,  All rights reserved</h3>
+                <h3>Made and maintained by
+                    <a href="http://github.com/surjkhanal">Sudhanshu</a>
+                </h3>
+                <div id="footer-social-links">
+                    <h2>Social links</h2>
+                    <a href="">
+                        <img src="https://img.icons8.com/color/36/000000/facebook-new.png"/>
+                    </a>
+                    <a href="">
+                        <img src="https://img.icons8.com/fluency/36/000000/instagram-new.png"/>
+                    </a>
+                    <a href="">
+                        <img src="https://img.icons8.com/fluency/36/000000/twitter.png"/>
+                    </a>
+                    <a href="">
+                        <img src="https://img.icons8.com/color/36/000000/youtube-play.png"/>
+                    </a>
+    
+                </div>
+            </div>
+            <div id="footer-contact">
+                <h2>Contact Us</h2>
+                <h3><img src="https://img.icons8.com/office/24/000000/worldwide-location.png"/> Harayana,India</h3>
+                <h3><img src="https://img.icons8.com/office/24/000000/phone-disconnected.png"/> +91 888 777 4546</h3>
+                <h3><img src="https://img.icons8.com/external-icongeek26-linear-colour-icongeek26/24/000000/external-email-essentials-icongeek26-linear-colour-icongeek26.png"/> contact@fashionstore.com</h3>
+
+            </div>
+    
+            <div id="footer-links">
+                <h2>Navigation</h2>
+                <h3>Account</h3>
+                <h3>Cart</h3>
+                <h3>Featured</h3>
+                <h3>Top Deals</h3>
+                <h3>New Arrival's</h3>
+            </div>
+            <div id="footer-category">
+                <h2>Categories</h2>
+                <h3>Men's Clothing</h3>
+                <h3>Women's Clothing</h3>
+                <h3>Kids Section</h3>
+                <h3>Electronic</h3>
+                <h3>Home Decorations</h3>
+            </div>
+        </div>
+    </footer>
 
 </body>
 
