--- a/product.html
+++ b/product.html
@@ -25,74 +25,77 @@
 </head>
 
 <body>
-    <div id="product">
-        <div id="img">
-            <div id="bigger">
-                <img src="./img/products/Modal/product-1.jpg" alt="">
-            </div>
-            <div id="others">
-                <img src="./img/products/Modal/gallery-1.jpg" alt="">
-                <img src="./img/products/Modal/gallery-2.jpg" alt="">
-                <img src="./img/products/Modal/gallery-3.jpg" alt="">
-                <img src="./img/products/Modal/gallery-4.jpg" alt="">
-
-            </div>
-
-        </div>
-        <div id="details">
-            <h1>THE KAIKA Men's Casual Striped Shirt</h1>
-            <div id="price">
-                <span class="money" id="latest">229</span>
-                <span class="money" id="actual">426</span>
-                <span class="discount" id="discount-given">46</span>
-                <span id="info">i</span>
-            </div>
-            <p id="deal">
-                <span class="money">100 </span> discount on 1st order
-            </p>
-            <div id="size">
-                <h2>Select Size</h2>
-                <span class="size-measure size-active">S</span>
-                <span class="size-measure">M</span>
-                <span class="size-measure">L</span>
-            </div>
-            <div id="next">
-                <div id="buy">
-                    <span class="icon icon-cart"></span>
-                    Buy
+    <div id="disabled">
+        <div id="product">
+            <div id="img">
+                <div id="bigger">
+                    <img src="./img/products/Modal/product-1.jpg" alt="">
                 </div>
-                <div id="like">
-                    <span class="icon icon-heart"></span>
-                    Save
+                <div id="others">
+                    <img src="./img/products/Modal/gallery-1.jpg" alt="">
+                    <img src="./img/products/Modal/gallery-2.jpg" alt="">
+                    <img src="./img/products/Modal/gallery-3.jpg" alt="">
+                    <img src="./img/products/Modal/gallery-4.jpg" alt="">
+
+                </div>
+
+            </div>
+            <div id="details">
+                <h1>THE KAIKA Men's Casual Striped Shirt</h1>
+                <div id="price">
+                    <span class="money" id="latest">229</span>
+                    <span class="money" id="actual">426</span>
+                    <span class="discount" id="discount-given">46</span>
+                    <span id="info">i</span>
+                </div>
+                <p id="deal">
+                    <span class="money">100 </span> discount on 1st order
+                </p>
+                <div id="size">
+                    <h2>Select Size</h2>
+                    <span class="size-measure size-active">S</span>
+                    <span class="size-measure">M</span>
+                    <span class="size-measure">L</span>
+                </div>
+                <div id="next">
+                    <div id="buy">
+                        <span class="icon icon-cart"></span>
+                        Buy
+                    </div>
+                    <div id="like">
+                        <span class="icon icon-heart"></span>
+                        Save
+                    </div>
+                </div>
+                <div id="expanded">
+                    <h2>Product Details</h2>
+                    <span>Fabric : Cotton
+
+                        Sleeve Length : Long Sleeves
+
+                        Pattern : Striped
+
+                        Multipack : 1
+
+                        Sizes :
+                        S (Chest Size : 39 in, Length Size: 28.5 in)
+
+                        XL (Chest Size : 45 in, Length Size: 30 in)
+
+                        L (Chest Size : 43 in, Length Size: 29.5 in)
+
+                        M (Chest Size : 41 in, Length Size: 29 in)
+
+                        XXL (Chest Size : 47 in, Length Size: 30.5 in)
+
+                        THE KAIKA Have All Type Of Shirt Like Casual,Striped,Solid,Plain,Checked And Other Designer
+                        Shirt.
+
+
+                    </span>
                 </div>
             </div>
-            <div id="expanded">
-                <h2>Product Details</h2>
-                <span>Fabric : Cotton
 
-                    Sleeve Length : Long Sleeves
-
-                    Pattern : Striped
-
-                    Multipack : 1
-
-                    Sizes :
-                    S (Chest Size : 39 in, Length Size: 28.5 in)
-
-                    XL (Chest Size : 45 in, Length Size: 30 in)
-
-                    L (Chest Size : 43 in, Length Size: 29.5 in)
-
-                    M (Chest Size : 41 in, Length Size: 29 in)
-
-                    XXL (Chest Size : 47 in, Length Size: 30.5 in)
-
-                    THE KAIKA Have All Type Of Shirt Like Casual,Striped,Solid,Plain,Checked And Other Designer
-                    Shirt.
-
-
-                </span>
-            </div>
         </div>
     </div>
 </body>
