--- a/index.html
+++ b/index.html
@@ -12,16 +12,17 @@
     <link rel="stylesheet" href="product.css">
     <link rel="stylesheet" href="banner-style.css">
     <script src="script.js" defer></script>
+    <script src="category.js" defer></script>
     <script src="icon.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Zen+Kurenaido&display=swap"
         rel="stylesheet">
-
 </head>
 
 <body>
+
     <nav class="container" id="navbar">
         <a id="logo" href="#">
             <span class="icon icon-logo"></span>
@@ -29,13 +30,17 @@
         </a>
 
         <div id="nav-links">
-            <a href="#">
+            <a href="#" id="nav-link-category">
+                Categories
+            </a>
+            <a href="#" id="nav-link-user">
                 <span class="icon icon-user"></span>
-                My Account</a>
-            <a href="#">
+                My Account
+            </a>
+            <a href="#" id="nav-link-saved">
                 <span class="icon icon-heart"></span>
             </a>
-            <a href="#">
+            <a href="#" id="nav-link-cart">
                 <span class="icon icon-cart"></span>
             </a>
         </div>
