--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/product.css">
     <link rel="stylesheet" href="style/banner-style.css">
+    <link rel="stylesheet" href="style/media.css">
 
     <script type='module' src="script/components.js" defer></script>
 
@@ -36,11 +37,14 @@
 
         <div id="nav-links">
             <a href="#" id="nav-link-category">
-                Categories <span class="nav-hovered hide"></span>
+                <span class="text">Categories</span> 
+                <span class="icon icon-burgermenu"></span> 
+                <span class="nav-hovered hide"></span>
             </a>
             <a href="#" id="nav-link-user">
                 <span class="icon icon-user"></span>
-                My Account <span class="nav-hovered hide"></span>
+                <span class="text">My Account </span> 
+                <span class="nav-hovered hide"></span>
             </a>
             <a href="#" id="nav-link-saved">
                 <span class="icon icon-heart"></span> 
@@ -51,6 +55,7 @@
                 <span class="icon icon-cart"></span> <span class="nav-hovered hide"></span>
                 <span class="nav-count hide"></span>
             </a>
+
         </div>
     </nav>
     <section id="banners">
