--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div id="nav-links">
             <a href="#" id="nav-link-category">
                 <span class="text">Categories</span> 
-                <span class="icon icon-burgermenu"></span> 
+                <span style="display: none"class="icon icon-burgermenu"></span> 
                 <span class="nav-hovered hide"></span>
             </a>
             <a href="#" id="nav-link-user">
